<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DbstarSettings</string>
    <string name="warning_text">警告</string>
    <string name="conformation_text">确认</string>
    <string name="systemsettings_userinfo">用户信息</string>
    <string name="systemsettings_receivestatus">接收状态</string>
    <string name="systemsettings_diskspace">磁盘管理</string>
    <string name="systemsettings_settings">系统设置</string>
    <string name="systemsettings_guodian">网关设置</string>
    <string name="systemsettings_advanced">高级设置</string>
    <string name="systemsettings_filebrowser">文件浏览</string>
    <string name="userinfo_system_version">系统版本</string>
    <string name="userinfo_user_card_number">用户卡号</string>
    <string name="userinfo_macaddress">本终端mac地址</string>
    <string name="userinfo_user_card_validity_term">用户卡有效期</string>
    <string name="userinfo_user_bussiness">用户所属业务</string>
    <string name="userinfo_user_residual_amount">点卡余额</string>
    <string name="deviceinfo_device_serialnumber">终端序列号</string>
    <string name="deviceinfo_hardware_type">硬件型号</string>
    <string name="deviceinfo_software_version">软件版本</string>
    <string name="deviceinfo_loader_version">Loader版本</string>
    <string name="deviceinfo_mac_address">Mac地址</string>
    <string name="deviceinfo_gateway_serialnumber">网关序列号</string>
    <string name="deviceinfo_server_ip">服务器IP</string>
    <string name="deviceinfo_server_port">服务器端口</string>
    <string name="userinfo_operator">运营商</string>
    <string name="userinfo_smartcard_number">智能卡号</string>
    <string name="userinfo_orderedproduct">订购产品</string>
    <string name="settings_video">视频</string>
    <string name="settings_audio">音频</string>
    <string name="settings_audio_transparent">透传</string>
    <string name="settings_audio_transcode">解码</string>
    <string name="settings_video_selection">选择</string>
    <string name="settings_video_1080p60">1080P60</string>
    <string name="settings_video_1080p25">1080P25</string>
    <string name="settings_video_1080i50">1080I50</string>
    <string name="settings_video_720p">720P</string>
    <string name="settings_video_auto">自适应</string>
    <string name="settings_item_help">帮助</string>
    <string name="settings_help_content">本程序的主要提供航天数字业务，包括电影、电视剧、纪录片等。\n\n在主界面中，通过左右键可以切换一级栏目，通过确认键可以进入到次级栏目。如果没有下一级栏目，则直接打开该栏目</string>
    <string name="settings_item_subtitle">字幕</string>
    <string name="settings_item_network">网络</string>
    <string name="settings_item_diskguard">磁盘预警</string>
    <string name="settings_item_automation">自动</string>
    <string name="settings_item_source">源码</string>
    <string name="settings_item_diskguard_spacesize">预警空间大小</string>
    <string name="settings_item_fontsize">字号</string>
    <string name="settings_item_fontcolor">字色</string>
    <string name="settings_item_boundary">边缘</string>
    <string name="settings_item_bottonmargin">与下间距</string>
    <string name="settings_item_autoget">自动获取</string>
    <string name="settings_item_ip">IP</string>
    <string name="settings_item_gateway">网关</string>
    <string name="settings_item_dns">DNS</string>
    <string name="guodiansettings_version">版本</string>
    <string name="guodiansettings_serverip">服务器地址</string>
    <string name="guodiansettings_serverport">服务器端口</string>
    <string name="guodiansettings_username">用户名</string>
    <string name="guodiansettings_password">密码</string>
    <string name="guodiansettings_serialnumber">序列号</string>
    <string name="inputview_title">输入</string>
    <string name="button_text_ok">确定</string>
    <string name="button_text_cancel">取消</string>
    <string name="dialog_upgrade_title">升级</string>
    <string name="dialog_upgrade_notes">确认升级系统吗？</string>
    <string name="diskmanagement_disksize">磁盘空间</string>
    <string name="diskmanagement_usedspace">占用空间</string>
    <string name="diskmanagement_emptyspace">剩余空间</string>
    <string name="diskmanagement_gaurdspace">预警空间</string>
    <string name="lock_settings_picker_title" msgid="3332098786253116023">"选择屏幕锁定"</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_quick_toggle_title" msgid="874495178395350104">"Wi-Fi"</string>
    <string name="wifi_quick_toggle_summary" msgid="1047950931623694366">"打开 Wi-Fi"</string>
    <string name="wifi_settings" msgid="1277428034634973011">"Wi-Fi"</string>
    <string name="wifi_settings_category" msgid="2810363951104753710">"Wi-Fi 设置"</string>
    <string name="wifi_settings_title" msgid="4351120897298124250">"Wi-Fi"</string>
    <string name="wifi_settings_summary" msgid="668767638556052820">"设置和管理无线接入点"</string>
    <string name="wifi_starting" msgid="6716593470710880000">"正在打开 Wi-Fi&#8230;"</string>
    <string name="wifi_stopping" msgid="244864762599017659">"正在关闭 Wi-Fi&#8230;"</string>
    <string name="wifi_error" msgid="3207971103917128179">"出错"</string>
    <string name="wifi_in_airplane_mode" msgid="8652520421778203796">"正处于飞行模式下"</string>
    <string name="wifi_fail_to_scan" msgid="1265540342578081461">"扫描不到网络"</string>
    <string name="wifi_notify_open_networks" msgid="3755768188029653293">"网络通知"</string>
    <string name="wifi_notify_open_networks_summary" msgid="3038290727701553612">"附近有开放网络时通知我"</string>
    <string name="wifi_enable_watchdog_service" msgid="3808826765041243874">"不采用状况差的连接"</string>
    <string name="wifi_enable_watchdog_service_summary" msgid="4227430628962787616">"仅在 Wi-Fi 互联网连接状况良好时使用 Wi-Fi 网络"</string>
    <string name="wifi_setting_sleep_policy_title" msgid="9107237003911220057">"在休眠状态下保持 Wi-Fi 连接"</string>
    <string name="wifi_setting_sleep_policy_error" msgid="8174902072673071961">"更改设置时出现问题"</string>
    <string name="wifi_add_network" msgid="6234851776910938957">"添加网络"</string>
    <string name="wifi_access_points" msgid="2664629396767022441">"Wi-Fi 网络"</string>
    <string name="wifi_menu_scan" msgid="1470911530412095868">"扫描"</string>
    <string name="wifi_menu_advanced" msgid="7522252991919573664">"高级"</string>
    <string name="wifi_menu_connect" msgid="4996220309848349408">"连接到网络"</string>
    <string name="wifi_menu_forget" msgid="8736964302477327114">"不保存网络"</string>
    <string name="wifi_menu_modify" msgid="2068554918652440105">"修改网络"</string>
    <string name="wifi_empty_list_wifi_off" msgid="4722299515264875943">"要查看可用网络，请打开 Wi-Fi。"</string>
    <string name="wifi_show_advanced" msgid="1793703023711426246">"显示高级选项"</string>
    <string name="wifi_network_setup" msgid="2243277654809358812">"WPS"</string>
    <string name="wifi_wps_pin" msgid="8242979682530043184">"键入从接入点获取的 PIN"</string>
    <string name="wifi_wps_setup_title" msgid="2301524571580808871">"WPS 设置"</string>
    <string name="wifi_wps_pin_output" msgid="7773693032190962123">"键入接入点上的 PIN <xliff:g id="WPS_PIN">%1$s</xliff:g>"</string>
    <string name="wifi_wps_in_progress" msgid="2776555137392461525">"正在进行 WPS，这一过程可能需要数十秒的时间"</string>
    <string name="wifi_wps_failed" msgid="1648418410092969300">"无法启动 WPS，请重试。"</string>
    <string name="wifi_ssid" msgid="641393708309146745">"网络 SSID"</string>
    <string name="wifi_security" msgid="6603611185592956936">"安全性"</string>
    <string name="wifi_signal" msgid="5514120261628065287">"信号强度"</string>
    <string name="wifi_status" msgid="4824568012414605414">"状态消息"</string>
    <string name="wifi_speed" msgid="3526198708812322037">"连接速度"</string>
    <string name="wifi_ip_address" msgid="1440054061044402918">"IP 地址"</string>
    <string name="wifi_eap_method" msgid="8529436133640730382">"EAP 方法"</string>
    <string name="please_select_phase2" msgid="5231074529772044898">"阶段2身份验证"</string>
    <string name="wifi_eap_ca_cert" msgid="3521574865488892851">"CA 证书"</string>
    <string name="wifi_eap_user_cert" msgid="1291089413368160789">"用户证书"</string>
    <string name="wifi_eap_identity" msgid="4359453783379679103">"身份"</string>
    <string name="wifi_eap_anonymous" msgid="2989469344116577955">"匿名身份"</string>
    <string name="wifi_password" msgid="5948219759936151048">"密码"</string>
    <string name="wifi_show_password" msgid="6461249871236968884">"显示密码"</string>
    <string name="wifi_ip_settings" msgid="3359331401377059481">"IP 设置"</string>
    <string name="wifi_unchanged" msgid="3410422020930397102">"（未更改）"</string>
    <string name="wifi_unspecified" msgid="5431501214192991253">"（未指定）"</string>
    <string name="wifi_remembered" msgid="4955746899347821096">"已保存"</string>
    <string name="wifi_disabled_generic" msgid="4259794910584943386">"已停用"</string>
    <string name="wifi_disabled_network_failure" msgid="3111321240793227690">"已停用状况不佳的互联网连接"</string>
    <string name="wifi_disabled_heading" msgid="1428050635183875599"></string>
    <string name="wifi_disabled_help" msgid="5416325603334140666">"系统因连接状况不佳而停用了该网络。您可以通过“设置”&gt;“Wi-Fi”屏幕中的“高级”菜单项关闭此功能。"</string>
    <string name="wifi_disabled_password_failure" msgid="8659805351763133575">"身份验证出现问题"</string>
    <string name="wifi_not_in_range" msgid="1136191511238508967">"不在范围内"</string>
    <string name="wifi_wps_available_first_item" msgid="3538912605343585226">"受保护的网络可用"</string>
    <string name="wifi_wps_available_second_item" msgid="6121307881706347616">" （受保护的网络可用）"</string>
    <string name="wifi_secured_first_item" msgid="4072076186051083451">"通过<xliff:g id="WIFI_SECURITY_SHORT">%1$s</xliff:g>进行保护"</string>
    <string name="wifi_secured_second_item" msgid="1326000076939056265">"，通过<xliff:g id="WIFI_SECURITY_SHORT">%1$s</xliff:g>进行保护"</string>
    <string name="wifi_security_none" msgid="7985461072596594400">"无"</string>
    <string name="wifi_connect" msgid="1076622875777072845">"连接"</string>
    <string name="wifi_forget" msgid="8168174695608386644">"不保存"</string>
    <string name="wifi_save" msgid="3331121567988522826">"保存"</string>
    <string name="wifi_cancel" msgid="6763568902542968964">"取消"</string>
    <string name="wifi_settings_aplist_title">Wi-Fi热点</string>
    <string name="wifi_settings_aplist_summary">当前可用的热点</string>
    <string name="wifi_switch_title_off">打开Wi-Fi</string>
    <string name="wifi_switch_summary_on">Wi-Fi已经打开</string>
    <string name="wifi_switch_summary_off">Wi-Fi已经关闭</string>
    <string name="wifi_scan_summary_normal">点击扫描网络</string>
	<string name="wifi_add_network_summary">点击添加网络</string>
	<string name="wifi_advanced_summary">点击进行高级网络设置</string>
    <string name="eth_switch_title_off">打开以太网</string>
    <string name="eth_switch_summary_on">以太网已经打开</string>
    <string name="eth_switch_summary_off">以太网已经关闭</string>
    <string name="eth_setting">以太网</string>
    <string name="eth_conf_perf_title">以太网设置</string>
    <string name="eth_conf_summary">以太网设备设置</string>
    <string name="display_settings" msgid="7965901687241669598">"显示"</string>
    <string name="tv_default_frequency_summary">60Hz</string>
    <string name="display_position">重显率</string>
    <string name="display_position_summary">设置您的电视重显率</string>
    <string name="cvbs_output_mode">双输出模式</string>
    <string name="cvbs_output_mode_summary">设置您的双输出模式</string>
    <string name="tv_output_mode">&quot;输出模式&quot;</string>
    <string name="tv_output_mode_summary">&quot;设置您的电视输出模式。&quot;</string>
    <string name="tv_default_frequency">默认高清制式刷新频率</string>
</resources>