<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_background" >

    <RelativeLayout
        android:id="@+id/view_header"
        android:layout_width="fill_parent"
        android:layout_height="108dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp" >

        <ImageView
            android:layout_width="269dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo_dbstar" />

        <TextView
            android:id="@+id/pageNumberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="1186dp"
            android:layout_marginTop="80dp"
            android:gravity="top|center_horizontal"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:gravity="right|center_vertical"
                android:text="@string/deviceinfo_device_serialnumber"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_device_serialnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="right|center_vertical"
                android:text="@string/deviceinfo_hardware_type"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_hardware_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="right|center_vertical"
                android:text="@string/deviceinfo_software_version"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_software_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="right|center_vertical"
                android:text="@string/deviceinfo_loader_version"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_loader_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="right|center_vertical"
                android:text="@string/deviceinfo_mac_address"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_mac_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="right|center_vertical"
                android:text="@string/deviceinfo_gateway_serialnumber"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_gateway_serialnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="right|center_vertical"
                android:text="@string/deviceinfo_server_ip"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_serverip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="right|center_vertical"
                android:text="@string/deviceinfo_server_port"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_serverport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        layout="@layout/footerview" />

</RelativeLayout>