<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_background" >

    <RelativeLayout
        android:id="@+id/view_header"
        android:layout_width="fill_parent"
        android:layout_height="108dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp" >

       <!-- <ImageView
            android:layout_width="269dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo_dbstar" /> -->

        <TextView
            android:id="@+id/pageNumberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="1186dp"
            android:layout_marginTop="80dp"
            android:gravity="top|center_horizontal"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="123dp"
        android:gravity="center"
        android:text="@string/settings_audio"
        android:textColor="#ffffff"
        android:textSize="32sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/settings_audio_transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/settings_audio_transparent" />

        <RadioButton
            android:id="@+id/settings_audio_transcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/settings_audio_transcode" />
    </RadioGroup>

    <include
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        layout="@layout/footerview" />

</RelativeLayout>